--- a/01-Backend/wipro-healthcare/src/main/resources/application.properties
+++ b/01-Backend/wipro-healthcare/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=wipro-healthcare
 
 spring.datasource.url=jdbc:mysql://localhost:3306/hospitalDB?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=12345
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
